<package format="2">
  <name>navbot3_navigation_and_mapping</name>
  <version>0.0.1</version>
  <description>Custom Turtlebot SLAM and navigation package by V. Petrov</description>
  <maintainer email="v.petrov.18.02.94@gmail.com">Vladimir Petrov</maintainer>
  <author email="v.petrov.18.02.94@gmail.com">Vladimir Petrov</author>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_slam</exec_depend>
  <depend>turtlesim</depend> 

</package>
